--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Untitled</title>
+  <title>moonkey</title>
   
 
 </head>
@@ -508,8 +508,8 @@
                         </p>
 
                         <div class="project-details">
-                            <strong>Project Name:</strong> Moonkey<br>
-                            <strong>Symbol:</strong> $MOONKEY<br>
+                            <strong>Project Name:</strong> moonkey<br>
+                            <strong>Symbol:</strong> $moonkey<br>
                             <strong>Chain:</strong> Solana<br>
                             <strong>Launch Date:</strong> May 2025
                         </div>
