--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
                 <h1 class="title">moonkey</h1>
                 <p class="tagline">One small step for Cosmo, one giant leap for monkeykind.</p>
                 <div class="wallet-address">
-                    CA: COMING SOON
+                    CA: 84QZoVav4EsANZuWEqUxLPJhn87AcamqgJPfNtV3pump
                 </div>
                 <div class="social-links">
                     <a href="https://x.com/moonkeymemesol" class="social-btn">Twitter</a>
